updating package file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "digital_cookbook",
+  "name": "digital-cookbook",
   "version": "1.0.0",
   "description": "A digital book to save your recipes",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
