--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "sharp": "^0.32.6",
     "uuid": "^9.0.1"
   }
 }
